# Youtube-Drivebook

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
ai/: architecture.md  decisions.md  plan.md  prd.md
ai/docs/: README.md
ai/prompts/: architecture_review_prompt.md  documentation_prompt.md  plan_prompt.md  prd_prompt.md
src/ytdrivebook/: __init__.py  cli.py  config.py  pipeline.py
src/ytdrivebook/extract/: __init__.py  base.py  youtube.py
src/ytdrivebook/index/: __init__.py  hyperlattice.py  vectors.py
src/ytdrivebook/load/: __init__.py  base.py  exporters.py
src/ytdrivebook/schema/: __init__.py  concept.py  content_unit.py  source.py
src/ytdrivebook/serve/: __init__.py  mcp_server.py
src/ytdrivebook/transform/: __init__.py  concepts.py  llm_client.py  structurer.py
tests/: fixtures.py  test_exporters.py  test_hyperlattice.py  test_structurer.py  test_youtube.py
