[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdrivebook"
version = "0.1.0"
description = "Scrape YouTube into a knowledge base and answer over it with LatticeRAG."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "groq>=0.11",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.0",
    "opencv-python>=4.9",
    "networkx>=3.2",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
vectors = ["faiss-cpu>=1.8"]
serve = ["mcp>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
drivebook = "ytdrivebook.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
